add reset request counter
